[tool.poetry]
name = "mjsqu-tap-oracle"
version = "0.0.1"
description = "`tap-oracle` is a Singer tap for oracle, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Mark Johnston"]
keywords = [
    "ELT",
    "oracle",
]
license = "Apache-2.0"
packages = [
    { include = "tap_oracle" },
]

[tool.poetry.dependencies]
python = "<3.12,>=3.11"
singer-sdk = { version="^0.45.5" }
oracledb = "^3.1.0"
fs-s3fs = { version = "^1.1.1", optional = true }
sqlalchemy = "^2.0.40"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
singer-sdk = { version="^0.45.5", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
plugins = "sqlmypy"

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["tap_oracle"]
target-version = "py37"


[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["tap_oracle"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-oracle = 'tap_oracle.tap:Taporacle.cli'
